kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: developer-side-code
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host : "piyush.local" #this is dummy domain name 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service 
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: my-nodeport-service 
            port:
              number: 80

# Since you don't have a domain, we use a placeholder like piyush.local. You can access this by mapping your Minikube/Node IP to this name in your /etc/hosts file.
